# Elcarax

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  STATUS.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
assets/themes/: elcarax-dark.toml
crates/elcarax_accessibility/: Cargo.toml
crates/elcarax_accessibility/src/: lib.rs
crates/elcarax_adapter_api/: Cargo.toml
crates/elcarax_adapter_api/src/: capability.rs  lib.rs  message.rs  protocol.rs  viewport.rs
crates/elcarax_adapter_host/: Cargo.toml
crates/elcarax_adapter_host/src/: lib.rs
crates/elcarax_adapter_sdk/: Cargo.toml
crates/elcarax_adapter_sdk/src/: lib.rs
crates/elcarax_app/: Cargo.toml
crates/elcarax_app/src/: adapter_display.rs  adapter_state.rs  asset_display.rs  asset_state.rs  asset_ui.rs  console.rs  editor_status.rs  inspector_display.rs  inspector_state.rs  inspector_ui.rs  main.rs  native_shell.rs  project_display.rs  project_state.rs  project_ui.rs  scene_display.rs  scene_state.rs  scene_ui.rs  viewport_display.rs  viewport_state.rs  viewport_ui.rs
crates/elcarax_assets/: Cargo.toml
crates/elcarax_assets/src/: demo.rs  diagnostic.rs  error.rs  index.rs  kind.rs  lib.rs  record.rs  scan.rs  selection.rs
crates/elcarax_commands/: Cargo.toml
crates/elcarax_commands/src/: command.rs  history.rs  lib.rs  property_change.rs
crates/elcarax_core/: Cargo.toml
crates/elcarax_core/src/: diagnostic.rs  error.rs  id.rs  lib.rs  viewport.rs  workspace.rs
crates/elcarax_devtools/: Cargo.toml
crates/elcarax_devtools/src/: lib.rs
crates/elcarax_game_adapter/: Cargo.toml
crates/elcarax_game_adapter/src/: main.rs
crates/elcarax_gpu/: Cargo.toml
crates/elcarax_gpu/src/: lib.rs
crates/elcarax_platform/: Cargo.toml
crates/elcarax_platform/src/: events.rs  lib.rs  native.rs  spec.rs
crates/elcarax_project/: Cargo.toml
crates/elcarax_project/src/: lib.rs
crates/elcarax_render/: Cargo.toml
crates/elcarax_render/src/: image.wgsl  lib.rs  rect.wgsl
crates/elcarax_scene_model/: Cargo.toml
crates/elcarax_scene_model/src/: demo.rs  diagnostic.rs  error.rs  hierarchy.rs  inspector.rs  kind.rs  lib.rs  name.rs  patch.rs  property.rs  property_display.rs  property_edit.rs  schema.rs  selection.rs  snapshot.rs
crates/elcarax_text/: Cargo.toml
crates/elcarax_text/src/: lib.rs
crates/elcarax_ui/: Cargo.toml
crates/elcarax_ui/src/: lib.rs
docs/: BUILD_NOTES.md  MILESTONE_10_READ_ONLY_INSPECTOR.md  MILESTONE_11_EDITABLE_INSPECTOR_UNDO.md  MILESTONE_12_ADAPTER_HOST_INTEGRATION.md  MILESTONE_13_ADAPTER_PROPERTY_WRITEBACK.md  MILESTONE_14A_PRODUCTIONIZE_RUNTIME.md  MILESTONE_14_VIEWPORT_PREVIEW_FOUNDATION.md  MILESTONE_1_NATIVE_SHELL.md  MILESTONE_2_RENDER_PRIMITIVES.md  MILESTONE_3_TEXT_RENDERING.md  MILESTONE_4_UI_TREE_LAYOUT.md  MILESTONE_5_INPUT_INTERACTION.md  MILESTONE_6_COMMAND_PALETTE.md  MILESTONE_7_PROJECT_SYSTEM_UI.md  MILESTONE_8_ASSET_BROWSER_FOUNDATION.md  MILESTONE_9_SCENE_TREE_FOUNDATION.md
docs/adr/: 001-rust-baseline.md  002-custom-ui.md  003-adapter-process.md  004-command-undo.md
examples/demo_project/: README.md
examples/demo_project/assets/materials/: default.material
examples/demo_project/assets/models/: cube.glb
examples/demo_project/assets/scenes/: demo.scene
examples/demo_project/scripts/: player.rs
