[package]
name = "elcarax_adapter_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
elcarax_core = { path = "../elcarax_core" }
elcarax_scene_model = { path = "../elcarax_scene_model" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
