[package]
name = "elcarax_adapter_host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
elcarax_adapter_api = { path = "../elcarax_adapter_api" }
elcarax_adapter_sdk = { path = "../elcarax_adapter_sdk" }
elcarax_core = { path = "../elcarax_core" }
