[package]
name = "elcarax_adapter_host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
elcarax_adapter_api = { path = "../elcarax_adapter_api" }
elcarax_core = { path = "../elcarax_core" }
serde_json = "1.0"

[dev-dependencies]
elcarax_scene_model = { path = "../elcarax_scene_model" }
