[package]
name = "elcarax_adapter_sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
elcarax_adapter_api = { path = "../elcarax_adapter_api" }
elcarax_core = { path = "../elcarax_core" }
