[package]
name = "elcarax_platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
native = ["dep:winit"]

[dependencies]
winit = { version = "0.30.12", optional = true }
