[package]
name = "elcarax_render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
elcarax_gpu = { path = "../elcarax_gpu" }
wgpu = "29.0.3"
