[package]
name = "elcarax_scene_model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
elcarax_core = { path = "../elcarax_core" }
serde = { version = "1.0", features = ["derive"] }
